# link_shorter

./: README.md  docker-compose.yml  pyproject.toml
link_shorter/: Dockerfile  gunicorn.conf  pyproject.toml
link_shorter/config/: celery.py  settings.py  urls.py
link_shorter/shorter/: admin.py  apps.py  views.py
link_shorter/shorter/api/: urls.py
link_shorter/shorter/api/mixins/: __init__.py  redis_mixin.py
link_shorter/shorter/api/serializers/: __init__.py  token_create_serializer.py  token_list_serializer.py
link_shorter/shorter/api/views/: __init__.py  redirect.py  token.py
link_shorter/shorter/middleware/: owner.py
link_shorter/shorter/migrations/: 0001_initial.py
link_shorter/shorter/models/: __init__.py  owner.py  token.py
link_shorter/shorter/tasks/: __init__.py  add_count.py
link_shorter/shorter/utils/: __init__.py  generate_subpart.py  redis_client.py
link_shorter/static/assets/: index-40f8405f.css  index-4711f167.js  index-f6c54334.js
link_shorter/templates/shorter/: index.html
