[tool.poetry]
name = "link-shorter"
version = "0.1.0"
description = ""
authors = ["fedor <f.shatruk@thesis.team>"]
readme = "README.md"
packages = [{include = "link_shorter"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
